--- a/colors-web-ajax/app/templates/colors.hbs
+++ b/colors-web-ajax/app/templates/colors.hbs
@@ -1,5 +1,6 @@
 <h2>Welcome to Ember.js</h2>
 <ul>
+	{{debuger}}
   {{#each controller}}
     <li {{action 'removeColor' this}} >{{color}}</li>
   {{/each}}
