--- a/colors-web-ajax/app/templates/application/_header.hbs
+++ b/colors-web-ajax/app/templates/application/_header.hbs
@@ -7,11 +7,11 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Brunch to the Future</a>
+      <a class="navbar-brand" href="#">{{t 'app.name'}}</a>
     </div>
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Home</a></li>
+        <li class="active"><a href="#">{{t 'home'}}</a></li>
       </ul>
     </div><!--/.nav-collapse -->
   </div>
