fixing authentication & authorization examples

--- a/colors-web-auth/app/templates/login.hbs
+++ b/colors-web-auth/app/templates/login.hbs
@@ -1,11 +1,9 @@
-<div class="container">
 <form class="form-signin" role="form">
-	<h2 class="form-signin-heading">Please sign in</h2>
-	<input type="email" class="form-control" placeholder="Email address" required autofocus>
-	<input type="password" class="form-control" placeholder="Password" required>
+	<h2 class="form-signin-heading">{{t 'login.header'}}</h2>
+	{{input type="email" class="form-control" placeholder="Email address"}}
+	{{input type="password" class="form-control" placeholder="Password"}}
 	<label class="checkbox">
-		<input type="checkbox" value="remember-me"> Remember me
+		<input type="checkbox" value="remember-me"> {{t 'login.remember'}}
 	</label>
-	<button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+	<button class="btn btn-lg btn-primary btn-block" type="submit">{{t 'login.loginButton'}}</button>
 </form>
-</div>
