--- a/colors-web-auth/app/templates/login.hbs
+++ b/colors-web-auth/app/templates/login.hbs
@@ -1,7 +1,7 @@
-<form class="form-signin" role="form">
+<form class="form-signin" role="form" {{action authenticate on='submit'}}>
 	<h2 class="form-signin-heading">{{t 'login.header'}}</h2>
-	{{input type="email" class="form-control" placeholder="Email address"}}
-	{{input type="password" class="form-control" placeholder="Password"}}
+	{{input id="identification" class="form-control" placeholder="Login id" value=identification}}
+	{{input id="password" type="password" class="form-control" placeholder="Password" value=password}}
 	<label class="checkbox">
 		<input type="checkbox" value="remember-me"> {{t 'login.remember'}}
 	</label>
