--- a/colors-web-auth/app/templates/application/_header.hbs
+++ b/colors-web-auth/app/templates/application/_header.hbs
@@ -13,6 +13,17 @@
       <ul class="nav navbar-nav">
         <li class="active"><a href="#">{{t 'home'}}</a></li>
       </ul>
-    </div><!--/.nav-collapse -->
+      
+      {{#if session.isAuthenticated}}
+      <ul class="nav navbar-nav navbar-right">
+      	<li class="dropdown">
+      	  <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{loginName}} <b class="caret"></b></a>
+      	  <ul class="dropdown-menu">
+	  	    		<li><a {{action 'invalidateSession'}}>Logout</a></li>    
+					</ul>
+      	</li>
+      </ul>
+      {{/if}}
+    </div><!--/.nav-collapse -->  
   </div>
 </div>
