--- a/colors-web-auth/app/templates/application/_header.hbs
+++ b/colors-web-auth/app/templates/application/_header.hbs
@@ -17,7 +17,7 @@
       {{#if session.isAuthenticated}}
       <ul class="nav navbar-nav navbar-right">
       	<li class="dropdown">
-      	  <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{loginName}} <b class="caret"></b></a>
+      	  <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{session.account.login}} <b class="caret"></b></a>
       	  <ul class="dropdown-menu">
 	  	    		<li><a {{action 'invalidateSession'}}>Logout</a></li>    
 					</ul>
